--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
   <body>
     <!-- Website -->
 
-
     <!-- nav -->
 
     <nav class="navbar navbar-expand-lg sticky-top">
@@ -75,7 +74,6 @@
       </div>
     </nav>
 
-
     <!-- header -->
 
     <header>
@@ -91,7 +89,6 @@
         </div>
       </div>
     </header>
-
 
     <!-- cards -->
 
@@ -189,202 +186,107 @@
       </div>
     </div>
 
-
     <!-- company -->
 
     <div class="company pt-5">
       <div class="container">
         <div class="row-1">
+          <div class="image-1">
+            <img class="img-fluid" src="img/lab.svg" alt="laptop" />
+          </div>
 
-            <div class="image-1">
-              <img class="img-fluid" src="img/lab.svg" alt="laptop" />
+          <div class="text">
+            <div class="main-title">
+              <h2><img src="img/Line.svg" alt="" /> Company</h2>
+              <span>Know more about our firm and who we are.</span>
             </div>
-
-            <div class="text">
-              <div class="main-title">
-                <h2><img src="img/Line.svg" alt="" /> Company</h2>
-                <span>Know more about our firm and who we are.</span>
-              </div>
-              <p>
-                here write the history of the corporate and the features of
-                values of DT agency..here write the history of the corporate and
-                the features of values of DT agency..
-              </p>
-              <p>
-                here write the history of the corporate and the features of
-                values of DT agency..here write the history of the corporate and
-                the features of values of DT agency..here write the history of
-                the corporate and the features of values of DT agency..here
-                write the history of the corporate and the features of values of
-                DT agency.
-              </p>
-            </div>
+            <p>
+              here write the history of the corporate and the features of values
+              of DT agency..here write the history of the corporate and the
+              features of values of DT agency..
+            </p>
+            <p>
+              here write the history of the corporate and the features of values
+              of DT agency..here write the history of the corporate and the
+              features of values of DT agency..here write the history of the
+              corporate and the features of values of DT agency..here write the
+              history of the corporate and the features of values of DT agency.
+            </p>
+          </div>
         </div>
         <div class="row-2">
-            <div class="text-2">
-              <div class="main-title">
-                <h2><img src="img/Line.svg" alt="" /> Our Vision</h2>
-                <span>Know more about our firm and who we are.</span>
-              </div>
-              <p>
-                here write the history of the corporate and the features of
-                values of DT agency..here write the history of the corporate and
-                the features of values of DT agency..
-              </p>
-              <p>
-                here write the history of the corporate and the features of
-                values of DT agency..here write the history of the corporate and
-                the features of values of DT agency..here write the history of
-                the corporate and the features of values of DT agency..here
-                write the history of the corporate and the features of values of
-                DT agency.
-              </p>
+          <div class="text-2">
+            <div class="main-title">
+              <h2><img src="img/Line.svg" alt="" /> Our Vision</h2>
+              <span>Know more about our firm and who we are.</span>
             </div>
-            <div class="image-2">
-              <img class="img-fluid" src="img/book.svg" alt="book" />
-            </div>
+            <p>
+              here write the history of the corporate and the features of values
+              of DT agency..here write the history of the corporate and the
+              features of values of DT agency..
+            </p>
+            <p>
+              here write the history of the corporate and the features of values
+              of DT agency..here write the history of the corporate and the
+              features of values of DT agency..here write the history of the
+              corporate and the features of values of DT agency..here write the
+              history of the corporate and the features of values of DT agency.
+            </p>
+          </div>
+          <div class="image-2">
+            <img class="img-fluid" src="img/book.svg" alt="book" />
+          </div>
         </div>
       </div>
     </div>
-
 
     <!-- gallery -->
-
-    <div class="gallery">
-      <div class="container">
-        <div id="carouselExample" class="carousel slide">
-          <div class="carousel-inner">
-            <div class="carousel-item active box-img">
-              <!--  -->
-              <div class="row">
-                <div class="col-sm-6 col-md-4 col-lg-4">
-                  <div class="box mb-3 bg-white" data-work="Application">
-                    <img class="img-fluid" src="img/1.svg" alt="" />
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-4">
-                  <div class="box mb-3 bg-white" data-work="Application">
-                    <img class="img-fluid" src="img/2.svg" alt="" />
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-4">
-                  <div class="box mb-3 bg-white" data-work="Application">
-                    <img class="img-fluid" src="img/3.svg" alt="" />
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-4">
-                  <div class="box mb-3 bg-white" data-work="Application">
-                    <img class="img-fluid" src="img/4.svg" alt="" />
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-4">
-                  <div class="box mb-3 bg-white" data-work="Application">
-                    <img class="img-fluid" src="img/5.svg" alt="" />
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-4">
-                  <div class="box mb-3 bg-white" data-work="Application">
-                    <img class="img-fluid" src="img/6.svg" alt="" />
-                  </div>
-                </div>
-              </div>
-              <!--  -->
+    <!-- <div class="gallery">
+        <div class="container">
+          <div class="card class="col-md-6 col-lg-4">
+            <div class="card-image">
+              <a href="https://bit.ly/34MdBRc" data-fancybox="gallery" data-caption="Caption Images 1">
+                <img src="https://bit.ly/34MdBRc" alt="Image Gallery">
+              </a>
             </div>
           </div>
-          <div class="carousel-item">
-            <!--  -->
-            <div class="row">
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/1.svg" alt="" />
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/2.svg" alt="" />
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/3.svg" alt="" />
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/4.svg" alt="" />
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/5.svg" alt="" />
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/6.svg" alt="" />
-                </div>
-              </div>
+          <div class="card class="col-md-6 col-lg-4">
+            <div class="card-image">
+              <a href="https://bit.ly/2Nv9zHh" data-fancybox="gallery" data-caption="Caption Images 1">
+                <img src="https://bit.ly/2Nv9zHh" alt="Image Gallery">
+              </a>
             </div>
-            <!--  -->
           </div>
-          <div class="carousel-item">
-            <!--  -->
-            <div class="row">
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/1.svg" alt="" />
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/2.svg" alt="" />
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/3.svg" alt="" />
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/4.svg" alt="" />
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/5.svg" alt="" />
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="box mb-3 bg-white" data-work="Application">
-                  <img class="img-fluid" src="img/6.svg" alt="" />
-                </div>
-              </div>
+          <div class="card class="col-md-6 col-lg-4">
+            <div class="card-image">
+              <a href="https://bit.ly/2q0iuay" data-fancybox="gallery" data-caption="Caption Images 1">
+                <img src="https://bit.ly/2q0iuay" alt="Image Gallery">
+              </a>
             </div>
-            <!--  -->
+          </div>
+          <div class="card class="col-md-6 col-lg-4">
+            <div class="card-image">
+              <a href="https://bit.ly/34PEofp" data-fancybox="gallery" data-caption="Caption Images 1">
+                <img src="https://bit.ly/34PEofp" alt="Image Gallery">
+              </a>
+            </div>
+          </div>
+          <div class="card class="col-md-6 col-lg-4">
+            <div class="card-image">
+              <a href="https://bit.ly/2X4z711" data-fancybox="gallery" data-caption="Caption Images 1">
+                <img src="https://bit.ly/2X4z711" alt="Image Gallery">
+              </a>
+            </div>
+          </div>
+          <div class="card class="col-md-6 col-lg-4">
+            <div class="card-image">
+              <a href="https://bit.ly/2rtIqMl" data-fancybox="gallery" data-caption="Caption Images 1">
+                <img src="https://bit.ly/2rtIqMl" alt="Image Gallery">
+              </a>
+            </div>
           </div>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExample"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExample"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </div>
-
+    </div> -->
 
     <!-- contact -->
 
@@ -502,7 +404,6 @@
       </div>
     </div>
 
-
     <!-- testis -->
 
     <section id="testi">
@@ -584,9 +485,8 @@
       </div>
     </section>
 
-
     <!-- portfolio -->
-    
+
     <section id="portflio">
       <div class="container">
         <div class="row">
@@ -638,10 +538,9 @@
       </div>
     </section>
 
-
     <!-- footer -->
 
-    <!-- <div class="row footer">
+    <div class="row footer">
       <div class="container">
         <div class="top-footer">
           <div class="side-left">
@@ -681,21 +580,30 @@
             <h3>Produced by</h3>
             <h3>key frame</h3>
             <!-- error -->
-          <!-- </div>
+          </div>
           <div class="side-right">
             <h3>All Rights Reserved Ⓒ toKeyframe Inc 2022</h3>
           </div>
         </div>
       </div>
-    </div> --> -->
-
-
-
-
-
-
+    </div>
 
     <!-- script js -->
+    <script>
+      // Fancybox Config
+      $('[data-fancybox="gallery"]').fancybox({
+        buttons: [
+          "slideShow",
+          "thumbs",
+          "zoom",
+          "fullScreen",
+          "share",
+          "close",
+        ],
+        loop: false,
+        protect: true,
+      });
+    </script>
     <script src="js/main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
